<resources>
    <string name="app_name">OMPM</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="error_password">You did not enter a Password!</string>
    <string name="error_phone">You did not enter a Phone Number!</string>
    <string name="split_the_bill">Split the Bill!</string>
    <string name="expenditure">Expenditure</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="notifications">notifications</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="placeholder">Placeholder</string>
    <string name="SplitAmount">Amount</string>
    <string name="get_contacts">GET CONTACTS</string>
    <string name="verificationC">onVerificationCompleted:</string>
    <string name="verificationF">onVerificationFailed</string>
    <string name="e_invalid_phone_number">Invalid phone number</string>
    <string name="too_many_requests_error">SMS quota has been exceeded</string>
    <string name="verification_code">Verification Code</string>
    <string name="e_invalid_code">Invalid Code</string>
    <string name="code_sent">Verification Code Sent!</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="verification_failed">Verification failed!</string>
    <string name="verification_succeeded">Verification Succeeded!</string>
    <string name="instant_validation">Instant Validation</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="split_equally">Split Equally</string>
    <string name="splitbill_alert">Add Item</string>
</resources>
