<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.droidcafeinput.MainActivity">
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="1"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile_settings"
        android:orderInCategory="2"
        android:title="@string/profile_settings"
        android:icon="@drawable/ic_profile_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_app_settings"
        android:orderInCategory="3"
        android:title="@string/app_settings"
        android:icon="@drawable/ic_app_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_rate_us"
        android:orderInCategory="4"
        android:title="@string/rate_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="5"
        android:title="@string/contact_us"
        app:showAsAction="never"/>
</menu>